07-orchestration-k8s/k8s-practice/ex_01/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: nginx-deployment
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: nginx 
  template: 
    metadata: 
      labels: 
        app: nginx
    spec: 
      containers:
        - name: nginx 
          image: nginx:latest
          ports: 
            - containerPort: 80
