07-orchestration-k8s/k8s-practice/ex_01/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        - name: my-storage
          mountPath: /mnt/data
  volumes:
    - name: config-volume
      configMap:
        name: example-config
    - name: my-storage
      persistentVolumeClaim:
        claimName: my-pvc
