07-orchestration-k8s/k8s-practice/ex_01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
    - host: example.com 
      http:
        paths:
          - path: /
            pathType: Prefix 
            backend: 
              service: 
                name: nginx-service 
                port: 
                  number: 80
